---
source: bluejay-visibility/tests/integration_test.rs
expression: printed_schema_definition
input_file: bluejay-visibility/tests/test_data/schema_with_orphan_types.graphql
---
directive @visible on FIELD_DEFINITION | ENUM_VALUE | INPUT_FIELD_DEFINITION | ARGUMENT_DEFINITION | SCALAR | OBJECT | INTERFACE | UNION | ENUM

type Query @visible {
  visibleInterfaceField: VisibleInterface! @visible
}

interface VisibleInterface @visible {
  field: String! @visible
}

type VisibleObject implements VisibleInterface @visible {
  field: String! @visible
}

